--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "rn-wc",
 	"version": "0.0.1",
-	"private": true,
+	"main": "./dist/components.umd.cjs",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
