--- a/packages/add-stakeholder/.gitignore
+++ b/packages/add-stakeholder/.gitignore
@@ -1,10 +1,3 @@
-.DS_Store
-node_modules
-/build
+/node_modules
 /.svelte-kit
-/package
-.env
-.env.*
-!.env.example
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
+/dist
