--- a/packages/add-stakeholder/package.json
+++ b/packages/add-stakeholder/package.json
@@ -1,24 +1,52 @@
 {
 	"name": "@requestnetwork/add-stakeholder",
 	"version": "1.0.0",
-	"main": "./dist/components.umd.cjs",
+	"main": "./dist/web-component.umd.cjs",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
-		"build:wc": "vite build -c vite.wc.config.js",
+		"build": "vite build && npm run package && npm run build:wc",
+		"build:wc": "vite build -c vite.wc.config.ts",
 		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
+		"package": "svelte-kit sync && svelte-package && npm run build:wc && publint",
+		"prepublishOnly": "npm run package",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"clean": "rm -rf dist && rm -rf .svelte-kit"
+	},
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		}
+	},
+	"files": [
+		"dist",
+		"!dist/**/*.test.*",
+		"!dist/**/*.spec.*"
+	],
+	"peerDependencies": {
+		"svelte": "^4.0.0"
 	},
 	"devDependencies": {
+		"@popperjs/core": "^2.11.8",
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"@sveltejs/vite-plugin-svelte": "^2.4.6",
+		"@sveltejs/kit": "^1.27.4",
+		"@sveltejs/package": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^2.5.2",
 		"bootstrap": "^5.3.2",
+		"publint": "^0.1.9",
 		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
+		"svelte-check": "^3.6.0",
+		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"type": "module",
+	"dependencies": {},
+	"license": "MIT",
+	"publishConfig": {
+		"access": "public"
+	}
 }
