--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "description": "Request Network Web Components",
   "main": "index.js",
   "workspaces": {
-    "packages": ["./packages/*"],
-    "nohoist": ["**"]
+    "packages": [
+      "./packages/*"
+    ],
+    "nohoist": [
+      "**"
+    ]
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf packages/**/node_modules"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "packageManager": "yarn@4.0.2"
 }
