--- a/package.json
+++ b/package.json
@@ -4,14 +4,7 @@
   "private": true,
   "description": "Request Network Web Components",
   "main": "index.js",
-  "workspaces": {
-    "packages": [
-      "./packages/*"
-    ],
-    "nohoist": [
-      "**"
-    ]
-  },
+  "workspaces": ["./packages/*"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf packages/**/node_modules"
