Change script name from clean to deep-clean
* This differentiates it from a normal "clean" which would just delete
  the build artifacts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "workspaces": ["./packages/*"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf packages/**/node_modules"
+    "deep-clean": "find . -name 'node_modules' -type d -prune -print -exec rm -rf '{}' \\;"
   },
   "author": "",
   "license": "MIT",
