--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -7,9 +7,8 @@ jobs:
     name: npm-publish
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-    - name: Publish
-      run: yarn workspaces foreach --all -pt --since npm publish
+    - uses: actions/checkout@v4
+    - run: npm ci
+    - run: npm publish --workspaces --dry-run
       env:
         NODE_AUTH_TOKEN: ${{ secrets.REQUEST_BOT_NPM_TOKEN }}
