--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -1,5 +1,8 @@
 name: npm-publish
 on:
+  push:
+    branches:
+      - master
   workflow_dispatch:
 
 jobs:
@@ -17,6 +20,6 @@ jobs:
     - name: Install dependencies 📥
       run: npm ci
     - name: Publish package on NPM 📦
-      run: npm publish --workspaces --dry-run
+      run: npm publish --workspaces
       env:
         NODE_AUTH_TOKEN: ${{ secrets.REQUEST_BOT_NPM_TOKEN }}
