[WIP] Try to fix is_release_needed.sh script

--- a/packages/add-stakeholder/package.json
+++ b/packages/add-stakeholder/package.json
@@ -12,7 +12,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"clean": "rm -rf dist && rm -rf .svelte-kit",
-		"is-release-needed": "../scripts/is-release-needed.sh"
+		"is-release-needed": "bash ../../scripts/is-release-needed.sh"
 	},
 	"exports": {
 		".": {
