--- a/packages/add-stakeholder/package.json
+++ b/packages/add-stakeholder/package.json
@@ -17,9 +17,7 @@
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js"
-		},
-		"./dist": {
+			"svelte": "./dist/index.js",
 			"require": "./dist/web-component.umd.cjs",
 			"default": "./dist/web-component.js"
 		}
