--- a/packages/add-stakeholder/package.json
+++ b/packages/add-stakeholder/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@requestnetwork/add-stakeholder",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"main": "./dist/web-component.umd.cjs",
 	"scripts": {
 		"dev": "vite dev",
@@ -17,7 +17,9 @@
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js"
+			"svelte": "./dist/index.js",
+			"require": "./dist/web-component.umd.cjs",
+			"default": "./dist/web-component.js"
 		}
 	},
 	"files": [
