feat: separated components, added tailwind, status, inoice-form, invoice-view, web3-onboard, ui components, utils, favicon, font-awesome icons, font

--- a/packages/create-request-form/tsconfig.json
+++ b/packages/create-request-form/tsconfig.json
@@ -10,6 +10,8 @@
     "sourceMap": true,
     "strict": true,
     "module": "ESNext",
-    "moduleResolution": "Node"
-  }
+    "moduleResolution": "Node",
+    "typeRoots": ["./src/types", "./node_modules/@types"]
+  },
+  "include": ["src/**/*", "src/*.d.ts"]
 }
