--- a/packages/create-request-form/package.json
+++ b/packages/create-request-form/package.json
@@ -31,16 +31,31 @@
     "svelte": "^4.0.0"
   },
   "devDependencies": {
-    "@requestnetwork/request-client.js": "^0.45.0",
-    "@requestnetwork/web3-signature": "^0.5.0",
+    "@requestnetwork/request-client.js": "0.45.0",
+    "@requestnetwork/web3-signature": "0.5.0",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.27.4",
     "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.5.2",
+    "@web3-onboard/coinbase": "^2.2.7",
+    "@web3-onboard/fortmatic": "^2.0.19",
+    "@web3-onboard/gnosis": "^2.2.1",
+    "@web3-onboard/infinity-wallet": "^2.0.4",
+    "@web3-onboard/ledger": "^2.6.0",
+    "@web3-onboard/trezor": "^2.4.4",
+    "@web3-onboard/trust": "^2.0.4",
+    "assert": "^2.1.0",
+    "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.2",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
     "ethers": "^5.7.2",
+    "postcss": "^8.4.38",
+    "rollup-plugin-polyfill-node": "^0.13.0",
+    "stream-browserify": "^3.0.0",
     "svelte": "^4.0.5",
     "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.4.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "viem": "^2.9.15",
@@ -53,5 +68,10 @@
   "license": "MIT",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@web3-onboard/core": "^2.21.5",
+    "@web3-onboard/injected-wallets": "^2.10.15",
+    "@web3-onboard/walletconnect": "^2.5.4"
   }
 }
