--- a/packages/create-request-form/package.json
+++ b/packages/create-request-form/package.json
@@ -44,6 +44,7 @@
     "crypto-browserify": "^3.12.0",
     "ethers": "^5.7.2",
     "postcss": "^8.4.38",
+    "publint": "^0.2.7",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "stream-browserify": "^3.0.0",
     "svelte": "^4.0.5",
