--- a/packages/request-dashboard/package.json
+++ b/packages/request-dashboard/package.json
@@ -61,8 +61,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@requestnetwork/shared": "0.1.0",
-    "@requestnetwork/payment-processor": "^0.44.0",
+    "@requestnetwork/payment-detection": "0.42.0",
+    "@requestnetwork/payment-processor": "0.44.0",
     "@requestnetwork/request-client.js": "0.45.0",
     "@requestnetwork/web3-signature": "0.5.0"
   }
