--- a/packages/invoice-dashboard/package.json
+++ b/packages/invoice-dashboard/package.json
@@ -29,9 +29,11 @@
   ],
   "dependencies": {
     "viem": "^2.9.15",
+    "svelte": "^4.0.5",
     "browserify-zlib": "^0.2.0",
     "stream-browserify": "^3.0.0",
     "crypto-browserify": "^3.12.0",
+    "@requestnetwork/shared": "0.1.0",
     "@requestnetwork/payment-detection": "0.42.0",
     "@requestnetwork/payment-processor": "0.44.0",
     "@requestnetwork/request-client.js": "0.45.0",
@@ -47,7 +49,6 @@
     "ethers": "^5.7.2",
     "postcss": "^8.4.38",
     "rollup-plugin-polyfill-node": "^0.13.0",
-    "svelte": "^4.0.5",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.4.1",
