--- a/packages/invoice-dashboard/package.json
+++ b/packages/invoice-dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@requestnetwork/create-request-form",
+  "name": "@requestnetwork/invoice-dashboard",
   "version": "0.1.0",
   "main": "./dist/web-component.umd.cjs",
   "scripts": {
@@ -33,8 +33,10 @@
     "browserify-zlib": "^0.2.0",
     "stream-browserify": "^3.0.0",
     "crypto-browserify": "^3.12.0",
-    "@requestnetwork/request-client.js": "0.45.0",
     "@requestnetwork/shared": "0.1.0",
+    "@requestnetwork/payment-detection": "0.42.0",
+    "@requestnetwork/payment-processor": "0.44.0",
+    "@requestnetwork/request-client.js": "0.45.0",
     "@requestnetwork/web3-signature": "0.5.0"
   },
   "devDependencies": {
@@ -44,8 +46,8 @@
     "@sveltejs/vite-plugin-svelte": "^2.5.2",
     "assert": "^2.1.0",
     "autoprefixer": "^10.4.19",
+    "ethers": "^5.7.2",
     "postcss": "^8.4.38",
-    "publint": "^0.2.7",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.4.3",
