--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,19 +1,40 @@
 {
   "name": "@requestnetwork/shared",
   "version": "0.1.0",
-  "main": "./src/index.ts",
+  "main": "./dist/web-component.umd.cjs",
   "type": "module",
   "license": "MIT",
+  "scripts": {
+    "build:wc": "vite build -c vite.wc.config.ts",
+    "build": "vite build && npm run package && npm run build:wc",
+    "package": "svelte-kit sync && svelte-package && npm run build:wc && publint"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "svelte": "./dist/index.js",
+      "require": "./dist/web-component.umd.cjs",
+      "default": "./dist/web-component.js"
+    }
+  },
+  "files": [
+    "dist",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
+  ],
+  "svelte": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "peerDependencies": {
     "svelte": "^4.0.0",
     "tailwindcss": "^3.4.3"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "publint": "^0.2.7",
     "tailwindcss": "^3.4.3"
   }
 }
