--- a/packages/create-request-form/package.json
+++ b/packages/create-request-form/package.json
@@ -28,14 +28,14 @@
     "!dist/**/*.spec.*"
   ],
   "dependencies": {
-    "viem": "^2.9.15",
-    "svelte": "^4.0.5",
-    "browserify-zlib": "^0.2.0",
-    "stream-browserify": "^3.0.0",
-    "crypto-browserify": "^3.12.0",
     "@requestnetwork/request-client.js": "0.45.0",
     "@requestnetwork/shared": "0.1.0",
-    "@requestnetwork/web3-signature": "0.5.0"
+    "@requestnetwork/web3-signature": "0.5.0",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
+    "stream-browserify": "^3.0.0",
+    "svelte": "^4.0.5",
+    "viem": "^2.9.15"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
