--- a/packages/create-request-form/package.json
+++ b/packages/create-request-form/package.json
@@ -4,7 +4,7 @@
   "main": "./dist/web-component.umd.cjs",
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build && npm run package && npm run build:wc",
+    "build": "npm run package",
     "build:wc": "vite build -c vite.wc.config.ts",
     "preview": "vite preview",
     "package": "svelte-kit sync && svelte-package && npm run build:wc && publint",
