--- a/packages/invoice-dashboard/package.json
+++ b/packages/invoice-dashboard/package.json
@@ -33,6 +33,7 @@
     "@requestnetwork/request-client.js": "0.45.0",
     "@requestnetwork/shared": "0.1.0",
     "@requestnetwork/web3-signature": "0.5.0",
+    "@web3-onboard/core": "^2.21.6",
     "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.0",
     "stream-browserify": "^3.0.0",
