--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -24,7 +24,7 @@
   ],
   "svelte": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "peerDependencies": {
+  "dependencies": {
     "svelte": "^4.0.0"
   },
   "publishConfig": {
