--- a/packages/create-request-form/package.json
+++ b/packages/create-request-form/package.json
@@ -4,7 +4,7 @@
   "main": "./dist/web-component.umd.cjs",
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build && npm run package && npm run build:wc",
+    "build": "npm run package",
     "build:wc": "vite build -c vite.wc.config.ts",
     "preview": "vite preview",
     "package": "svelte-kit sync && svelte-package && npm run build:wc && publint",
@@ -28,14 +28,14 @@
     "!dist/**/*.spec.*"
   ],
   "dependencies": {
-    "viem": "^2.9.15",
-    "svelte": "^4.0.5",
-    "browserify-zlib": "^0.2.0",
-    "stream-browserify": "^3.0.0",
-    "crypto-browserify": "^3.12.0",
     "@requestnetwork/request-client.js": "0.45.0",
     "@requestnetwork/shared": "0.1.0",
-    "@requestnetwork/web3-signature": "0.5.0"
+    "@requestnetwork/web3-signature": "0.5.0",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
+    "stream-browserify": "^3.0.0",
+    "svelte": "^4.0.5",
+    "viem": "^2.9.15"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
@@ -43,12 +43,9 @@
     "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.5.2",
     "assert": "^2.1.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
     "publint": "^0.2.7",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "svelte-check": "^3.6.0",
-    "tailwindcss": "^3.4.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.4.2",
