--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -13,6 +13,9 @@ jobs:
       matrix:
         package:
           - "@requestnetwork/add-stakeholder"
+          - "@requestnetwork/create-invoice-form"
+          - "@requestnetwork/invoice-dashboard"
+          - "@requestnetwork/shared"
     steps:
     - name: Checkout repository 🛎️
       uses: actions/checkout@v4
