--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -25,7 +25,8 @@
   "svelte": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "svelte": "^4.0.0"
+    "svelte": "^4.0.0",
+    "validator": "^13.12.0"
   },
   "publishConfig": {
     "access": "public"
@@ -33,7 +34,6 @@
   "devDependencies": {
     "@types/validator": "^13.11.10",
     "path": "^0.12.7",
-    "publint": "^0.2.7",
-    "validator": "^13.12.0"
+    "publint": "^0.2.7"
   }
 }
