--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -25,14 +25,12 @@
   "svelte": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "svelte": "^4.0.0",
-    "validator": "^13.12.0"
+    "svelte": "^4.0.0"
   },
   "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
-    "@types/validator": "^13.11.10",
     "path": "^0.12.7",
     "publint": "^0.2.7"
   }
