--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   },
   "author": "",
   "license": "MIT",
-  "packageManager": "yarn@4.0.2"
+  "packageManager": "yarn@4.0.2",
+  "devDependencies": {
+    "npm-check-updates": "^16.14.20"
+  }
 }
