fix: updated npm-publish and is-release script

--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -12,10 +12,10 @@ jobs:
     strategy:
       matrix:
         package:
-          - "add-stakeholder"
-          - "create-invoice-form"
-          - "invoice-dashboard"
-          - "shared"
+          - "packages/add-stakeholder"
+          - "packages/create-invoice-form"
+          - "packages/invoice-dashboard"
+          - "packages/shared"
     steps:
       - name: Checkout repository 🛎️
         uses: actions/checkout@v4
@@ -30,11 +30,14 @@ jobs:
         run: npm ci
 
       - name: Check for shared package updates and update dependencies 🔄
-        if: ${{ matrix.package == 'shared' }}
+        if: ${{ matrix.package == 'packages/shared' }}
         run: |
           SHARED_PACKAGE_NAME="@requestnetwork/shared"
-          CURRENT_VERSION="$(node -p -e \"require('./packages/shared/package.json').version\")"
+          CURRENT_VERSION=$(node -p "require('./packages/shared/package.json').version")
           LATEST_VERSION=$(npm show $SHARED_PACKAGE_NAME version)
+
+          echo "Current version of $SHARED_PACKAGE_NAME: $CURRENT_VERSION"
+          echo "Latest version of $SHARED_PACKAGE_NAME: $LATEST_VERSION"
 
           if [ "$CURRENT_VERSION" != "$LATEST_VERSION" ]; then
             echo "Updating $SHARED_PACKAGE_NAME from $CURRENT_VERSION to $LATEST_VERSION"
@@ -46,8 +49,13 @@ jobs:
             )
 
             for package in "${DEPENDENT_PACKAGES[@]}"; do
+              echo "Updating $package to use $SHARED_PACKAGE_NAME@$LATEST_VERSION"
               cd "$package"
-              ncu -u "$SHARED_PACKAGE_NAME@$LATEST_VERSION"
+              npm install "$SHARED_PACKAGE_NAME@$LATEST_VERSION"
+
+              # Update package version (minor version increment)
+              npm version minor
+
               cd -
             done
 
@@ -62,14 +70,14 @@ jobs:
             git push
           else
             echo "$SHARED_PACKAGE_NAME is already at the latest version ($CURRENT_VERSION)"
+          fi
 
-      - name: Install dependencies again if shared package was updated
-        if: ${{ matrix.package == 'shared' }}
-        run: npm ci
+      - name: Make is-release-needed.sh executable
+        run: chmod +x ./scripts/is-release-needed.sh
 
       - name: Check if version number has already been released 🕵️‍♀️
         id: is-release-needed
-        run: npm run is-release-needed --workspace=${{ matrix.package }}
+        run: ./scripts/is-release-needed.sh ./${{ matrix.package }}
         env:
           GITHUB_ENV: $GITHUB_ENV
 
@@ -78,8 +86,9 @@ jobs:
 
       - name: Debug package info 🐛
         run: |
-          echo "Package Name: $(node -p -e "require('./packages/${{ matrix.package }}/package.json').name")"
-          npm info $(node -p -e "require('./packages/${{ matrix.package }}/package.json').name")
+          PACKAGE_NAME=$(node -p "require('./${{ matrix.package }}/package.json').name")
+          echo "Package Name: $PACKAGE_NAME"
+          npm info $PACKAGE_NAME
 
       - name: Publish package on NPM 📦
         if: ${{ steps.is-release-needed.outputs.is-release-needed == 'true' }}
