--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build:wc": "vite build -c vite.wc.config.ts",
     "build": "npm run package",
-    "package": "svelte-kit sync && svelte-package && npm run build:wc && publint"
+    "package": "svelte-kit sync && svelte-package && npm run build:wc && publint",
+    "is-release-needed": "bash ../../scripts/is-release-needed.sh"
   },
   "exports": {
     ".": {
