--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -12,10 +12,10 @@ jobs:
     strategy:
       matrix:
         package:
-          - "packages/add-stakeholder"
-          - "packages/create-invoice-form"
-          - "packages/invoice-dashboard"
-          - "packages/shared"
+          - "@requestnetwork/add-stakeholder"
+          - "@requestnetwork/create-invoice-form"
+          - "@requestnetwork/invoice-dashboard"
+          - "@requestnetwork/shared"
     steps:
       - name: Checkout repository 🛎️
         uses: actions/checkout@v4
@@ -77,7 +77,7 @@ jobs:
 
       - name: Check if version number has already been released 🕵️‍♀️
         id: is-release-needed
-        run: ./scripts/is-release-needed.sh ./${{ matrix.package }}
+        run: echo "is-release-needed-${{ matrix.package }}=(npm run ./scripts/is-release-needed.sh --workspace=${{ matrix.package }} --silent)" >> $GITHUB_OUTPUT
 
       - name: Setup .npmrc file to publish to npm 📝
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.REQUEST_BOT_NPM_TOKEN }}" > ~/.npmrc
