--- a/packages/invoice-dashboard/package.json
+++ b/packages/invoice-dashboard/package.json
@@ -28,11 +28,11 @@
     "!dist/**/*.spec.*"
   ],
   "dependencies": {
-    "@requestnetwork/payment-detection": "0.42.0",
-    "@requestnetwork/payment-processor": "0.44.0",
-    "@requestnetwork/request-client.js": "0.45.0",
+    "@requestnetwork/payment-detection": "^0.43.1-next.2043",
+    "@requestnetwork/payment-processor": "^0.45.1-next.2043",
+    "@requestnetwork/request-client.js": "^0.47.1-next.2043",
     "@requestnetwork/shared": "^0.4.0",
-    "@requestnetwork/web3-signature": "0.5.0",
+    "@requestnetwork/web3-signature": "^0.6.1-next.2043",
     "@web3-onboard/core": "^2.21.6",
     "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.0",
