--- a/packages/invoice-dashboard/package.json
+++ b/packages/invoice-dashboard/package.json
@@ -31,7 +31,10 @@
     "@requestnetwork/payment-detection": "0.43.1-next.2043",
     "@requestnetwork/payment-processor": "0.45.1-next.2043",
     "@requestnetwork/request-client.js": "0.47.1-next.2043",
-    "@requestnetwork/shared": "^0.4.0",
+    "@requestnetwork/shared-components": "*",
+    "@requestnetwork/shared-utils": "*",
+    "@requestnetwork/shared-icons": "*",
+    "@requestnetwork/shared-types": "*",
     "@requestnetwork/web3-signature": "0.6.1-next.2043",
     "@web3-onboard/core": "^2.21.6",
     "browserify-zlib": "^0.2.0",
