--- a/packages/invoice-dashboard/package.json
+++ b/packages/invoice-dashboard/package.json
@@ -32,31 +32,20 @@
     "@requestnetwork/payment-processor": "0.45.1-next.2043",
     "@requestnetwork/request-client.js": "0.47.1-next.2043",
     "@requestnetwork/shared-components": "*",
-    "@requestnetwork/shared-utils": "*",
     "@requestnetwork/shared-icons": "*",
     "@requestnetwork/shared-types": "*",
-    "@requestnetwork/web3-signature": "0.6.1-next.2043",
-    "@web3-onboard/core": "^2.21.6",
-    "browserify-zlib": "^0.2.0",
-    "crypto-browserify": "^3.12.0",
-    "publint": "^0.2.8",
-    "stream-browserify": "^3.0.0",
-    "svelte": "^4.0.5",
-    "viem": "^2.9.15"
+    "@requestnetwork/shared-utils": "*",
+    "viem": "^2.9.15",
+    "ethers": "^5.7.2"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.27.4",
+    "svelte": "^4.0.5",
     "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.5.2",
-    "assert": "^2.1.0",
-    "ethers": "^5.7.2",
-    "rollup-plugin-polyfill-node": "^0.13.0",
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.4.2",
-    "vite-plugin-node-polyfills": "^0.21.0"
+    "vite": "^4.4.2"
   },
   "svelte": "./dist/index.js",
   "types": "./dist/index.d.ts",
