--- a/packages/create-invoice-form/package.json
+++ b/packages/create-invoice-form/package.json
@@ -29,27 +29,17 @@
   ],
   "dependencies": {
     "@requestnetwork/request-client.js": "0.47.1-next.2043",
-    "@requestnetwork/shared": "0.4.0",
-    "@requestnetwork/web3-signature": "0.6.1-next.2043",
-    "browserify-zlib": "^0.2.0",
-    "crypto-browserify": "^3.12.0",
-    "stream-browserify": "^3.0.0",
-    "svelte": "^4.0.5",
+    "@requestnetwork/shared-components": "*",
+    "@requestnetwork/shared-types": "*",
+    "@requestnetwork/shared-utils": "*",
     "viem": "^2.9.15"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.27.4",
-    "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.5.2",
-    "assert": "^2.1.0",
-    "publint": "^0.2.7",
-    "rollup-plugin-polyfill-node": "^0.13.0",
+    "svelte": "^4.0.5",
     "svelte-check": "^3.6.0",
-    "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.4.2",
-    "vite-plugin-node-polyfills": "^0.21.0"
+    "vite": "^4.4.2"
   },
   "svelte": "./dist/index.js",
   "types": "./dist/index.d.ts",
