Increment patch version. Set publish dry run

--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -46,5 +46,4 @@ jobs:
       - name: Publish package on NPM 📦
         if: steps.is-release-needed.outputs.is-release-needed == 'true'
         run: |
-          # npm publish --workspace=${{ matrix.package }}
-          echo "Would publish matrix package: ${{ matrix.package }}"
+          npm publish --workspace=${{ matrix.package }} --dry-run
