--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -46,5 +46,5 @@ jobs:
       - name: Publish package on NPM 📦
         if: steps.is-release-needed.outputs.is-release-needed == 'true'
         run: |
-          npm config set registry http://registry.npmjs.org
+          npm config set registry https://registry.npmjs.org
           npm publish --workspace=${{ matrix.package }}
