--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -47,4 +47,5 @@ jobs:
         if: steps.is-release-needed.outputs.is-release-needed == 'true'
         run: |
           npm config set registry https://registry.npmjs.org
+          npm whoami
           npm publish --workspace=${{ matrix.package }}
