--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -48,4 +48,4 @@ jobs:
         run: |
           npm config set registry https://registry.npmjs.org
           npm whoami
-          npm publish --workspace=${{ matrix.package }}
+          npm publish --workspace=${{ matrix.package }} --dry-run
