--- a/packages/invoice-dashboard/package.json
+++ b/packages/invoice-dashboard/package.json
@@ -31,13 +31,14 @@
     "@requestnetwork/payment-detection": "0.43.1-next.2043",
     "@requestnetwork/payment-processor": "0.45.1-next.2043",
     "@requestnetwork/request-client.js": "0.47.1-next.2043",
-    "viem": "^2.9.15",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "html2pdf.js": "^0.10.2",
+    "viem": "^2.9.15"
   },
   "devDependencies": {
-    "svelte": "^4.0.5",
     "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.5.2",
+    "svelte": "^4.0.5",
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
