--- a/packages/invoice-dashboard/package.json
+++ b/packages/invoice-dashboard/package.json
@@ -31,14 +31,23 @@
     "@requestnetwork/payment-detection": "0.43.1-next.2043",
     "@requestnetwork/payment-processor": "0.45.1-next.2043",
     "@requestnetwork/request-client.js": "0.47.1-next.2043",
+    "clsx": "^2.1.1",
     "ethers": "^5.7.2",
+    "mode-watcher": "^0.4.0",
+    "svelte-sonner": "^0.3.27",
+    "tailwind-merge": "^2.4.0",
+    "tailwind-variants": "^0.2.1",
     "viem": "^2.9.15"
   },
   "devDependencies": {
     "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.5.2",
+    "@tailwindcss/typography": "^0.5.13",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "svelte": "^4.0.5",
     "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.4.4",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.4.2"
