--- a/shared/components/components.json
+++ b/shared/components/components.json
@@ -3,12 +3,12 @@
   "style": "default",
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "src/app.css",
+    "css": "./app.css",
     "baseColor": "slate"
   },
   "aliases": {
-    "components": "$lib/components",
-    "utils": "$lib/utils"
+    "components": "./",
+    "utils": "./utils"
   },
   "typescript": true
 }
