--- a/shared/components/package.json
+++ b/shared/components/package.json
@@ -1,7 +1,21 @@
 {
   "name": "@requestnetwork/shared-components",
   "license": "MIT",
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "mode-watcher": "^0.4.0",
+    "svelte-sonner": "^0.3.27",
+    "tailwind-merge": "^2.4.0",
+    "tailwind-variants": "^0.2.1"
+  },
   "devDependencies": {
-    "svelte": "^4.0.5"
+    "@tailwindcss/typography": "^0.5.13",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "svelte": "^4.0.5",
+    "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.4.4",
+    "tslib": "^2.4.1",
+    "typescript": "^5.0.0"
   }
 }
