--- a/packages/payment-widget/package.json
+++ b/packages/payment-widget/package.json
@@ -56,7 +56,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@requestnetwork/currency": "^0.17.0",
-    "@web3modal/ethers": "^5.0.7"
+    "@web3modal/ethers": "^5.0.7",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
