--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "packageManager": "npm@10.5.0",
   "dependencies": {
+    "@requestnetwork/currency": "^0.18.0",
     "bits-ui": "^0.21.12"
   }
 }
