--- a/packages/payment-widget/package.json
+++ b/packages/payment-widget/package.json
@@ -56,6 +56,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@requestnetwork/web3-signature": "^0.8.0",
     "@web3modal/ethers": "^5.0.7",
     "vite-plugin-node-polyfills": "^0.22.0"
   }
