--- a/packages/payment-widget/package.json
+++ b/packages/payment-widget/package.json
@@ -56,8 +56,10 @@
     "access": "public"
   },
   "dependencies": {
+    "@requestnetwork/request-client.js": "^0.49.0",
     "@requestnetwork/web3-signature": "^0.8.0",
-    "@web3modal/ethers": "^5.0.7",
+    "@web3modal/ethers5": "^5.0.11",
+    "ethers": "^5.7.2",
     "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
