--- a/packages/payment-widget/package.json
+++ b/packages/payment-widget/package.json
@@ -56,6 +56,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@requestnetwork/payment-processor": "^0.47.0",
     "@requestnetwork/request-client.js": "^0.49.0",
     "@requestnetwork/web3-signature": "^0.8.0",
     "@web3modal/ethers5": "^5.0.11",
