--- a/packages/invoice-dashboard/tsconfig.json
+++ b/packages/invoice-dashboard/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
+    "jsx": "react",
     "allowJs": true,
     "checkJs": true,
     "esModuleInterop": true,
@@ -10,8 +11,13 @@
     "sourceMap": true,
     "strict": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
-    "typeRoots": ["./src/types", "./node_modules/@types"]
+    "moduleResolution": "Bundler",
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "baseUrl": ".",
+    "paths": {
+      "$src/*": ["src/*"],
+      "$utils/*": ["src/lib/utils/*"]
+    }
   },
   "include": ["src/**/*", "src/*.d.ts"]
 }
